force-app/main/default/objects/Proforma__c/fields/AccesoGerenciaDeVentas__c.field-meta.xml
<CustomField>
    <fullName>AccesoGerenciaDeVentas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acceso Gerencia de Ventas</label>
    <type>Checkbox</type>
</CustomField>