force-app/main/default/objects/Proforma__c/fields/Alerta_Credito__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Credito__c</fullName>
    <formula>IF( (Cuenta__r.Parent.Balance_Cuenta__c - ImporteTotal__c) &lt; 0,  IMAGE(&quot;/resource/redCircle&quot;, &apos;rojo&apos; , 10, 10)  + &apos;    Se excede el crédito por $&apos; &amp; 
IF( 
  ABS(Cuenta__r.Parent.Balance_Cuenta__c - ImporteTotal__c) &gt;= 1000000, 
  TEXT(FLOOR(ABS(Cuenta__r.Parent.Balance_Cuenta__c - ImporteTotal__c) / 1000000)) &amp; &quot;.&quot;, 
  &quot;&quot;) &amp; 
IF( 
  ABS(Cuenta__r.Parent.Balance_Cuenta__c - ImporteTotal__c) &gt;= 1000, 
  RIGHT(TEXT(FLOOR(ABS(Cuenta__r.Parent.Balance_Cuenta__c - ImporteTotal__c) / 1000)), 3) &amp; &quot;.&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(ABS(Cuenta__r.Parent.Balance_Cuenta__c - ImporteTotal__c))), 3) &amp; &quot;,&quot; &amp; 
IF( 
  MOD(ABS(Cuenta__r.Parent.Balance_Cuenta__c - ImporteTotal__c) , 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Cuenta__r.Parent.Balance_Cuenta__c - ImporteTotal__c) , 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(ABS(Cuenta__r.Parent.Balance_Cuenta__c - ImporteTotal__c) , 1), 2) * 100, 99)) 
),
IMAGE(&quot;/resource/greenCircle&quot;, &apos;verde&apos; , 10, 10) + &apos;    OK!&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerta Crédito Autorizado</label>
    <type>Text</type>
</CustomField>