force-app/main/default/objects/Proforma__c/fields/Alerta_Importe__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Importe__c</fullName>
    <description>Alerta si el importe supera los 80K (aprobación Jesús) y también si supera los 40K (aprobación Rubén)</description>
    <formula>IMAGE(&quot;/resource/greenCircle&quot;, &apos;verde&apos; , 10, 10) &amp; &apos; OK!&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerta Importe &gt; 40K y &gt; 80K</label>
    <type>Text</type>
</CustomField>