force-app/main/default/objects/Proforma__c/fields/Alerta_Margen__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Margen__c</fullName>
    <formula>IF( MargenOperacion__c &lt; 0.18,
IMAGE(&quot;/resource/redCircle&quot;, &apos;rojo&apos; , 10, 10) + &quot;    MARGEN BAJO (&quot; + RIGHT(TEXT(FLOOR(MargenOperacion__c * 100)), 2) &amp; &quot;,&quot; &amp; 
IF( 
  MOD(MargenOperacion__c * 100, 1) * 100 &lt; 10, 
  &quot;0&quot; &amp; TEXT(ROUND(MOD(MargenOperacion__c * 100, 1), 2) * 100), 
  TEXT(MIN(ROUND(MOD(MargenOperacion__c * 100, 1), 2) * 100, 99)) 
) &amp; &quot;%)&quot;,
IMAGE(&quot;/resource/greenCircle&quot;, &quot;verde&quot; , 10, 10) + &quot;    OK!&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alerta Margen Bajo</label>
    <type>Text</type>
</CustomField>