force-app/main/default/objects/Proforma__c/fields/Aprobado_Direccion__c.field-meta.xml
<CustomField>
    <fullName>Aprobado_Direccion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>De uso del sistema. Cuando se aprueba una proforma con margen bajo o que excede el monto de seguridad o que excede el Crédito Preaprobado, el sistema marca este campo</description>
    <label>Aprobado Dirección</label>
    <type>Checkbox</type>
</CustomField>