force-app/main/default/objects/Proforma__c/fields/CBMTotal__c.field-meta.xml
<CustomField>
    <fullName>CBMTotal__c</fullName>
    <label>CBMTotal</label>
    <summarizedField>ProformaLineItem__c.CBMTotal__c</summarizedField>
    <summaryForeignKey>ProformaLineItem__c.Proforma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>