force-app/main/default/objects/Proforma__c/fields/ConfClienteSubida__c.field-meta.xml
<CustomField>
    <fullName>ConfClienteSubida__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cuando se sube la confirmación del cliente, el sistema marca este campo</description>
    <label>Conf. Cliente subida</label>
    <type>Checkbox</type>
</CustomField>