force-app/main/default/objects/Proforma__c/fields/ConfirmacionCliente__c.field-meta.xml
<CustomField>
    <fullName>ConfirmacionCliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conf. Cliente aprobada</label>
    <type>Checkbox</type>
</CustomField>