force-app/main/default/objects/Proforma__c/fields/CostoExtra__c.field-meta.xml
<CustomField>
    <fullName>CostoExtra__c</fullName>
    <label>Costo Extra (total)</label>
    <summarizedField>ProformaLineItem__c.CostoExtraTot__c</summarizedField>
    <summaryForeignKey>ProformaLineItem__c.Proforma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>