force-app/main/default/objects/Proforma__c/fields/CostoFabrica__c.field-meta.xml
<CustomField>
    <fullName>CostoFabrica__c</fullName>
    <description>Sumatoria de costos de todos los Line Items:
Para cada line Item = Costo Fabrica * Unidades</description>
    <inlineHelpText>Sumatoria de costos de todos los Line Items:
Para cada line Item = Costo Fabrica * Unidades</inlineHelpText>
    <label>Costo Fábrica (total)</label>
    <summarizedField>ProformaLineItem__c.CostoFabricaTot__c</summarizedField>
    <summaryForeignKey>ProformaLineItem__c.Proforma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>