force-app/main/default/objects/Proforma__c/fields/CostoTotal__c.field-meta.xml
<CustomField>
    <fullName>CostoTotal__c</fullName>
    <formula>CostoFabrica__c + CostoExtra__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>