force-app/main/default/objects/Proforma__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proforma</relationshipLabel>
    <relationshipName>Proforma</relationshipName>
    <type>Lookup</type>
</CustomField>