force-app/main/default/objects/Proforma__c/fields/Estado_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_Operacion__c</fullName>
    <formula>IF(
    ISBLANK(MargenOperacion__c),
    IF(
        TEXT($User.LanguageLocaleKey) = &quot;en_US&quot;,
        &quot;No items&quot;,
        &quot;Sin items&quot;
    ),
    IF(
        Aprobado_Direccion__c,
        IF(
            TEXT($User.LanguageLocaleKey) = &quot;en_US&quot;,
            &quot;Approved&quot;,
            &quot;Aprobada&quot;
        ),
        IF(
            OR(
                MargenOperacion__c &lt; 0.18,
                (Cuenta__r.Parent.Balance_Cuenta__c - ImporteTotal__c) &lt; 0
            ),
            IF(
                TEXT($User.LanguageLocaleKey) = &quot;en_US&quot;,
                &quot;Requires Approval&quot;,
                &quot;Requiere Aprobación&quot;
            ),
            IF(
                TEXT($User.LanguageLocaleKey) = &quot;en_US&quot;,
                &quot;Meets Conditions&quot;,
                &quot;Cumple Condiciones&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado Operación</label>
    <type>Text</type>
</CustomField>