force-app/main/default/objects/Proforma__c/fields/EstudioOportunidad__c.field-meta.xml
<CustomField>
    <fullName>EstudioOportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estudio de Oportunidad</label>
    <referenceTo>EstudioOportunidad__c</referenceTo>
    <relationshipLabel>Proformas</relationshipLabel>
    <relationshipName>Proformas</relationshipName>
    <type>Lookup</type>
</CustomField>