force-app/main/default/objects/Proforma__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <description>Compras edita el campo, Ventas ve únicamente Proformas finalizadas.</description>
    <inlineHelpText>Compras edita el campo, Ventas ve únicamente Proformas finalizadas.</inlineHelpText>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abierta</fullName>
                <default>true</default>
                <label>Abierta</label>
            </value>
            <value>
                <fullName>En estudio</fullName>
            </value>
            <value>
                <fullName>Finalizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>