force-app/main/default/objects/Proforma__c/fields/ETD__c.field-meta.xml
<CustomField>
    <fullName>ETD__c</fullName>
    <label>Cargo Ready Date</label>
    <type>Date</type>
</CustomField>