force-app/main/default/objects/Proforma__c/fields/FechaAprobacionDireccion__c.field-meta.xml
<CustomField>
    <fullName>FechaAprobacionDireccion__c</fullName>
    <description>De uso del sistema, para las Proformas que sean aprobadas (Por Dirección), se guarda la fecha de la aprobación</description>
    <label>Fecha Aprobación Dirección</label>
    <type>DateTime</type>
</CustomField>