force-app/main/default/objects/Proforma__c/fields/FechaConfirmacionCliente__c.field-meta.xml
<CustomField>
    <fullName>FechaConfirmacionCliente__c</fullName>
    <label>Fecha Confirmación Cliente</label>
    <type>Date</type>
</CustomField>