force-app/main/default/objects/Proforma__c/fields/FechaEnviadoAprobacion__c.field-meta.xml
<CustomField>
    <fullName>FechaEnviadoAprobacion__c</fullName>
    <description>De uso del sistema, se marca cuando inicia el proceso de aprobación de una Proforma</description>
    <label>Fecha Enviado Aprobación</label>
    <type>DateTime</type>
</CustomField>