force-app/main/default/objects/Proforma__c/fields/Final_Shipping_Window__c.field-meta.xml
<CustomField>
    <fullName>Final_Shipping_Window__c</fullName>
    <label>Final Shipping Window</label>
    <type>Date</type>
</CustomField>