force-app/main/default/objects/Proforma__c/fields/FormaDePago__c.field-meta.xml
<CustomField>
    <fullName>FormaDePago__c</fullName>
    <formula>if(ISBLANK(TEXT(Cuenta__r.FormaPago__c)),
TEXT(Cuenta__r.Parent.FormaPago__c),
TEXT(Cuenta__r.FormaPago__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forma de Pago</label>
    <type>Text</type>
</CustomField>