force-app/main/default/objects/Proforma__c/fields/Id_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Id_Sandbox__c</fullName>
    <externalId>true</externalId>
    <label>Id Sandbox</label>
    <length>18</length>
    <type>Text</type>
</CustomField>