force-app/main/default/objects/Proforma__c/fields/Importe_Venta_Neto_Nuevo__c.field-meta.xml
<CustomField>
    <fullName>Importe_Venta_Neto_Nuevo__c</fullName>
    <description>Descuenta incrementos puntuales que se hayan hecho a nivel de producto de oportunidad. Ya estaba contemplado en el cálculo de margen.</description>
    <label>Importe Venta Neto</label>
    <summarizedField>ProformaLineItem__c.Importe_Neto_Nuevo__c</summarizedField>
    <summaryForeignKey>ProformaLineItem__c.Proforma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>