force-app/main/default/objects/Proforma__c/fields/ImporteTotal__c.field-meta.xml
<CustomField>
    <fullName>ImporteTotal__c</fullName>
    <label>Importe Venta Bruto</label>
    <summarizedField>ProformaLineItem__c.ImporteTotal__c</summarizedField>
    <summaryForeignKey>ProformaLineItem__c.Proforma__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>