force-app/main/default/objects/Proforma__c/fields/Initial_Shipping_Window__c.field-meta.xml
<CustomField>
    <fullName>Initial_Shipping_Window__c</fullName>
    <label>Initial Shipping Window</label>
    <type>Date</type>
</CustomField>