force-app/main/default/objects/Proforma__c/fields/MargenOperacion__c.field-meta.xml
<CustomField>
    <fullName>MargenOperacion__c</fullName>
    <formula>IF(Importe_Venta_Neto_Nuevo__c = 0, 0, 1 - ( CostoTotal__c / Importe_Venta_Neto_Nuevo__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen de la Operación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>