force-app/main/default/objects/Proforma__c/fields/MotivoReqAprobacion__c.field-meta.xml
<CustomField>
    <fullName>MotivoReqAprobacion__c</fullName>
    <formula>&quot;&quot; +
IF( ImporteTotal__c &gt; 40000,
&quot;Importe Total&quot;, &quot;&quot;)
+
IF( MargenOperacion__c &lt; 0.18,
  IF(ImporteTotal__c &gt; 40000,
    &quot; / Margen&quot;, &quot;Margen&quot;), &quot;&quot;)
+
IF( (Cuenta__r.Parent.Balance_Cuenta__c - ImporteTotal__c) &lt; 0,
  IF(OR(ImporteTotal__c &gt; 40000, MargenOperacion__c &lt; 0.18),
    &quot; / Crédito&quot;, &quot;Crédito&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Motivo req. aprobación</label>
    <type>Text</type>
</CustomField>