force-app/main/default/objects/Proforma__c/fields/Nombre_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Pedido__c</fullName>
    <formula>Pedido_Consolidado__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Pedido</label>
    <type>Text</type>
</CustomField>