force-app/main/default/objects/Proforma__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>El sistema vinculará cada Proforma creada a la Oportunidad correspondiente al Estudio de Oportunidad relacionado</description>
    <inlineHelpText>El sistema vinculará cada Proforma creada a la Oportunidad correspondiente al Estudio de Oportunidad relacionado</inlineHelpText>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proformas</relationshipLabel>
    <relationshipName>Proformas</relationshipName>
    <type>Lookup</type>
</CustomField>