force-app/main/default/objects/Proforma__c/fields/Pedido_Consolidado__c.field-meta.xml
<CustomField>
    <fullName>Pedido_Consolidado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pedido que ha sido consolidado</description>
    <label>Pedido</label>
    <referenceTo>PedidoDeCompra__c</referenceTo>
    <relationshipLabel>Proformas</relationshipLabel>
    <relationshipName>Proformas</relationshipName>
    <type>Lookup</type>
</CustomField>