force-app/main/default/objects/Proforma__c/fields/Planificacion_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Planificacion_Comercial__c</fullName>
    <formula>Oportunidad__r.PlanificacionComercial__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planificación Comercial</label>
    <type>Text</type>
</CustomField>