force-app/main/default/objects/Proforma__c/fields/Resultado_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Resultado_Aprobacion__c</fullName>
    <description>Campo de uso del sistema, para alertas ante Aprobaciones/Rechazos</description>
    <label>Resultado Aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
            <value>
                <fullName>Enviada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>