force-app/main/default/objects/Proforma__c/fields/Tipo_de_Contenedor_NEW__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Contenedor_NEW__c</fullName>
    <label>Tipo de Contenedor (NEW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>