force-app/main/default/objects/Proforma__c/fields/Tipo_de_Contenedores__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Contenedores__c</fullName>
    <formula>IF(CBMTotal__c &lt; 25,
&apos;Grupaje&apos;,
IF( X20_pies__c &gt; 0,
TEXT(X20_pies__c) &amp; &quot;* 20&apos;&quot;,
&apos;&apos;)
&amp;
IF( X40_pies__c &gt; 0,
IF(X20_pies__c &gt; 0,
&apos; + &apos;,
&apos;&apos;) + TEXT(X40_pies__c) &amp; &quot;* 40&apos;&quot;,
&apos;&apos;)
&amp;
IF( X40_pies_HC__c &gt; 0,
IF(OR(X20_pies__c &gt; 0, X40_pies__c &gt;0),
&apos; + &apos;,
&apos;&apos;) + TEXT(X40_pies_HC__c) &amp; &quot;* 40&apos; HC&quot;,
&apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Contenedor(es)</label>
    <type>Text</type>
</CustomField>