force-app/main/default/objects/Proforma__c/fields/TipoDeContenedor__c.field-meta.xml
<CustomField>
    <fullName>TipoDeContenedor__c</fullName>
    <label>Tipo de Contenedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20 pies</fullName>
            </value>
            <value>
                <fullName>40 pies</fullName>
            </value>
            <value>
                <fullName>40 pies HQ</fullName>
            </value>
            <value>
                <fullName>Grupaje</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>