force-app/main/default/objects/Proforma__c/fields/X20_pies__c.field-meta.xml
<CustomField>
    <fullName>X20_pies__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cantidad de contenedores de 20 pies dentro de la Proforma</description>
    <label># 20 pies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>