force-app/main/default/objects/Proforma__c/fields/X40_pies_HC__c.field-meta.xml
<CustomField>
    <fullName>X40_pies_HC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Recuento de contenedores de 40 pies HC dentro de la proforma</description>
    <label># 40 pies HC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>