force-app/main/default/objects/Proforma__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Oportunidad__c</columns>
    <columns>TipoDeContenedor__c</columns>
    <columns>CBMTotal__c</columns>
    <columns>ImporteTotal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <label>Proformas 2018</label>
</ListView>