force-app/main/default/objects/Proforma__c/listViews/Confirmacion_Subida_Falta_Aprobar.listView-meta.xml
<ListView>
    <fullName>Confirmacion_Subida_Falta_Aprobar</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Cuenta__c</columns>
    <columns>Oportunidad__c</columns>
    <columns>Tipo_de_Contenedores__c</columns>
    <columns>CBMTotal__c</columns>
    <columns>ETD__c</columns>
    <columns>ImporteTotal__c</columns>
    <columns>Importe_Venta_Neto_Nuevo__c</columns>
    <columns>MargenOperacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ConfClienteSubida__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ConfirmacionCliente__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>PRs Upload Confirmation/Pending Approval</label>
    <sharedTo>
        <role>Gerencia_Compras</role>
        <role>Gerencia_Ventas</role>
    </sharedTo>
</ListView>