force-app/main/default/objects/Proforma__c/listViews/Copia_de_2024_Todas_las_Proformas.listView-meta.xml
<ListView>
    <fullName>Copia_de_2024_Todas_las_Proformas</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Cuenta__c</columns>
    <columns>Oportunidad__c</columns>
    <columns>Tipo_de_Contenedores__c</columns>
    <columns>CBMTotal__c</columns>
    <columns>ETD__c</columns>
    <columns>ImporteTotal__c</columns>
    <columns>Importe_Venta_Neto_Nuevo__c</columns>
    <columns>MargenOperacion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>ETD__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2025</value>
    </filters>
    <filters>
        <field>Oportunidad__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Proformas 2025</label>
</ListView>