force-app/main/default/objects/Proforma__c/listViews/X2019_Todas_las_Proformas.listView-meta.xml
<ListView>
    <fullName>X2019_Todas_las_Proformas</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Oportunidad__c</columns>
    <columns>TipoDeContenedor__c</columns>
    <columns>CBMTotal__c</columns>
    <columns>ImporteTotal__c</columns>
    <columns>ETD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>FechaConfirmacionCliente__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2019 12:00 AM</value>
    </filters>
    <label>Proformas 2019</label>
</ListView>